Bug 409210 - python importer fails to parse method parameter
Summary: python importer fails to parse method parameter
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.28.2 (KDE Applications 19.04.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-26 13:47 UTC by Ralf Habacker
Modified: 2019-06-27 07:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.3 (KDE Applications 19.04.3)
Sentry Crash Report:


Attachments
test case (328 bytes, text/x-python)
2019-06-26 13:47 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-06-26 13:47:01 UTC
Created attachment 121161 [details]
test case

SUMMARY

umbrello fails to import method parameters correctly

STEPS TO REPRODUCE
1. download appended test file
2. start umbrello
3. choose python as active language
4. import the downloaded file

OBSERVED RESULT
The method parameters used in the python file are not imported correctly

EXPECTED RESULT
The method parameters should be imported correctly
Comment 1 Ralf Habacker 2019-06-27 07:14:09 UTC
Git commit 50e1c09fc9ca28a4f7ef8d7cb2c2576d2d06a854 by Ralf Habacker.
Committed on 26/06/2019 at 14:22.
Pushed by habacker into branch 'Applications/19.04'.

python importer: Extend for parsing method parameter default values
FIXED-IN:2.28.3 (KDE Applications 19.04.3)

A  +22   -0    test/import/python/method-parameters.py
M  +102  -63   umbrello/codeimport/pythonimport.cpp
M  +5    -1    umbrello/codeimport/pythonimport.h

https://commits.kde.org/umbrello/50e1c09fc9ca28a4f7ef8d7cb2c2576d2d06a854
Comment 2 Ralf Habacker 2019-06-27 07:14:13 UTC
Git commit b1db9b207d26cd1bf5e18e88727bd5b5e25e850d by Ralf Habacker.
Committed on 27/06/2019 at 07:13.
Pushed by habacker into branch 'Applications/19.04'.

Move negative sign handling into PythonImport::parseInitializer()

M  +6    -5    umbrello/codeimport/pythonimport.cpp

https://commits.kde.org/umbrello/b1db9b207d26cd1bf5e18e88727bd5b5e25e850d
Comment 3 Ralf Habacker 2019-06-27 07:14:13 UTC
Git commit 9f1fa2567473b456a76e4d5ea2fedfbfb1a496f3 by Ralf Habacker.
Committed on 27/06/2019 at 07:12.
Pushed by habacker into branch 'Applications/19.04'.

python importer: Extend for parsing method parameter default values
FIXED-IN:2.28.3 (KDE Applications 19.04.3)

M  +13   -0    umbrello/codeimport/pythonimport.cpp

https://commits.kde.org/umbrello/9f1fa2567473b456a76e4d5ea2fedfbfb1a496f3