python importer: Extend for parsing method parameter default values

BUG:409210
FIXED-IN:2.28.3 (KDE Applications 19.04.3)