umbrello/codeimport/pythonimport.cpp
@@ -207,75 +207,123 @@ QString PythonImport::skipBody()
     return body;
 }
 
+bool PythonImport::parseInitializer(const QString &keyword, QString &type, QString &value)
+{
+    if (keyword == QLatin1String("[")) {
+        type = QLatin1String("list");
+        int index = m_srcIndex;
+        skipToClosing(QLatin1Char('['));
+        for (int i = index; i <= m_srcIndex; i++)
+            value += m_source[i];
+    } else if (keyword == QLatin1String("{")) {
+        type = QLatin1String("dict");
+        int index = m_srcIndex;
+        skipToClosing(QLatin1Char('{'));
+        for (int i = index; i <= m_srcIndex; i++)
+            value += m_source[i];
+    } else if (keyword == QLatin1String("(")) {
+        type = QLatin1String("tuple");
+        int index = m_srcIndex;
+        skipToClosing(QLatin1Char('('));
+        for (int i = index; i <= m_srcIndex; i++)
+            value += m_source[i];
+    } else if (keyword.startsWith(QLatin1String("\""))) {
+        type = QLatin1String("string");
+        value = keyword;
+    } else if (keyword == QLatin1String("True") || keyword == QLatin1String("False")) {
+        type = QLatin1String("bool");
+        value = keyword;
+    } else if (keyword.contains(QRegExp(QLatin1String("-?\\d+\\.\\d*")))) {
+        type = QLatin1String("float");
+        value = keyword;
+    } else if (keyword.contains(QRegExp(QLatin1String("-?\\d+")))) {
+        type = QLatin1String("int");
+        value = keyword;
+    } else if (keyword.toLower() == "none") {
+        type = QLatin1String("object");
+        value = keyword;
+    } else if (!keyword.isEmpty()) {
+        if (lookAhead() == "(") {
+            advance();
+            type = keyword;
+            int index = m_srcIndex;
+            skipToClosing(QLatin1Char('('));
+            for (int i = index; i <= m_srcIndex; i++)
+                value += m_source[i];
+        } else
+            type = QLatin1String("object");
+    } else
+        type = QLatin1String("object");
+    return true;
+}
+
 /**
  * Parse assignments in the form \<identifier\> '=' \<value\>
  * Instance variables are identified by a prefixed 'self.'.
  * @return success status of parsing
  */
-bool PythonImport::parseAssignmentStmt(const QString keyword)
+bool PythonImport::parseAssignmentStmt(const QString &keyword)
 {
-    QString variable = keyword;
-    advance();
-    QString value = advance();
-    if (value == QLatin1String("-"))
-        value.append(advance());
+    QString variableName = keyword;
 
     bool isStatic = true;
-    if (variable.startsWith(QLatin1String("self."))) {
-        variable.remove(0,5);
+    if (variableName.startsWith(QLatin1String("self."))) {
+        variableName.remove(0,5);
         isStatic = false;
     }
     Uml::Visibility::Enum visibility = Uml::Visibility::Public;
-    if (variable.startsWith(QLatin1String("__"))) {
+    if (variableName.startsWith(QLatin1String("__"))) {
         visibility = Uml::Visibility::Private;
-        variable.remove(0, 2);
-    } else if (variable.startsWith(QLatin1String("_"))) {
+        variableName.remove(0, 2);
+    } else if (variableName.startsWith(QLatin1String("_"))) {
         visibility = Uml::Visibility::Protected;
-        variable.remove(0, 1);
-    }
-    QString type;
-    if (value == QLatin1String("[")) {
-        type = QLatin1String("list");
-        for(QString token = advance(); token != ";"; token = advance()) {
-            value += token;
-        }
-    } else if (value == QLatin1String("{")) {
-        type = QLatin1String("dict");
-        for(QString token = advance(); token != ";"; token = advance()) {
-            value += token;
-        }
-    } else if (value == QLatin1String("(")) {
-        type = QLatin1String("tuple");
-        for(QString token = advance(); token != ";"; token = advance()) {
-            value += token;
-        }
-    } else if (value.startsWith(QLatin1String("\""))) {
-        type = QLatin1String("string");
-    } else if (value == QLatin1String("True") || value == QLatin1String("False")) {
-        type = QLatin1String("bool");
-    } else if (value.contains(QRegExp(QLatin1String("-?\\d+\\.\\d*")))) {
-        type = QLatin1String("float");
-    } else if (value.contains(QRegExp(QLatin1String("-?\\d+")))) {
-        type = QLatin1String("int");
-    } else if (!value.isEmpty()) {
-        if (lookAhead() == "(") {
-            advance();
-            type = value;
-            value = QLatin1String("");
-            for(QString token = advance(); token != ")"; token = advance()) {
-                value += token;
-            }
-            if (!value.isEmpty())
-                value = QString("(%1)").arg(value);
-        } else
-            type = QLatin1String("object");
+        variableName.remove(0, 1);
     }
 
-    UMLObject* o = Import_Utils::insertAttribute(m_klass, visibility, variable,
+    QString type;
+    QString initialValue;
+    if (advance() == QLatin1String("=")) {
+
+        QString value = advance();
+        if (value == QLatin1String("-"))
+            value.append(advance());
+        if (!parseInitializer(value, type, initialValue))
+            return false;
+    }
+
+    UMLObject* o = Import_Utils::insertAttribute(m_klass, visibility, variableName,
                                                  type, m_comment, false);
     UMLAttribute* a = o->asUMLAttribute();
-    a->setInitialValue(value);
+    a->setInitialValue(initialValue);
     a->setStatic(isStatic);
+    return true;
+}
+
+bool PythonImport::parseMethodParameters(UMLOperation *op)
+{
+    bool firstParam = true;
+    UMLAttribute *attr = nullptr;
+    while (m_srcIndex < m_source.count() && advance() != QLatin1String(")")) {
+        const QString& parName = m_source[m_srcIndex];
+        if (attr && parName == QLatin1String("=")) {
+            QString type, value;
+            parseInitializer(advance(), type, value);
+            attr->setInitialValue(value);
+            attr->setTypeName(type);
+        } else {
+            if (firstParam) {
+                if (parName.compare(QLatin1String("self"), Qt::CaseInsensitive) != 0) {
+                    m_isStatic = true;
+                    attr = Import_Utils::addMethodParameter(op, QLatin1String("string"), parName);
+                }
+                firstParam = false;
+            } else {
+                attr = Import_Utils::addMethodParameter(op, QLatin1String("string"), parName);
+            }
+        }
+        if (lookAhead() == QLatin1String(","))
+            advance();
+    }
     return true;
 }
 
@@ -344,21 +392,12 @@ bool PythonImport::parseStmt()
             skipBody();
             return true;
         }
-        bool firstParam = true;
-        while (m_srcIndex < srcLength && advance() != QLatin1String(")")) {
-            const QString& parName = m_source[m_srcIndex];
-            if (firstParam) {
-                if (parName.compare(QLatin1String("self"), Qt::CaseInsensitive) != 0) {
-                    m_isStatic = true;
-                    Import_Utils::addMethodParameter(op, QLatin1String("string"), parName);
-                }
-                firstParam = false;
-            } else {
-                /*UMLAttribute *att =*/ Import_Utils::addMethodParameter(op, QLatin1String("string"), parName);
-            }
-            if (advance() != QLatin1String(","))
-                break;
+        if (!parseMethodParameters(op)) {
+            uError() << "importPython error on parsing method parameter for method " << name;
+            skipBody();
+            return true;
         }
+
         Import_Utils::insertMethod(m_klass, op, visibility, QLatin1String("string"),
                                    m_isStatic, false /*isAbstract*/, false /*isFriend*/,
                                    isConstructor, false, m_comment);
